--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icona.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Torvo</title>
+    <title>Whats-Meta</title>
   </head>
   <body>
     <div id="root"></div>
